topic/kubernetes/infra/prod/monitoring-stack/ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx-dev
  rules:
    - host: prometheus-aws-test.cici.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-kube-prometheus-prometheus 
                port:
                  number: 9090
            path: /
            pathType: ImplementationSpecific
    - host: grafana-aws-test.cici.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-grafana 
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: alertmanager-aws-test.cici.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-kube-prometheus-alertmanager
                port:
                  number: 9093
            path: /
            pathType: ImplementationSpecific
